--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.20.1"
-  }
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.1",
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://github.com/gesielr/cardtrack.git"
 }
