--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cardtrack",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://carloshenriquepvh@github.io/cardtrack",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
@@ -21,8 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +45,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.20.1",
     "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://github.com/gesielr/cardtrack.git"
+  }
 }
